Add toolkits design

--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -10,41 +10,67 @@ permalink: /work/toolkits/
 %}
 
 <div class="container">
-  <div class="row">
-    <p>
-      Here are some of the tools and resources that we use at Skylight to help us and our
-      clients deliver better public services. These toolkits are always being iterated on
-      and are available to everyone under our <a href="https://github.com/skylight-hq/skylight.digital/blob/master/LICENSE.md">public-domain license.</a>
-      Feel free to copy and adapt them as you choose.
-    </p>
+  <p>
+    Here are some of the tools and resources that we use at Skylight to help us and our
+    clients deliver better public services. These toolkits are always being iterated on
+    and are available to everyone under our <a href="https://github.com/skylight-hq/skylight.digital/blob/master/LICENSE.md">public-domain license.</a>
+    Feel free to copy and adapt them as you choose.
+  </p>
 
-    <ul>
-      <li>Digital Talent Management Handbook. A comprehensive guide on how government agencies can recruit, hire, onboard, and retain digital talent.</li>
-      <li>Data Sharing Playbook. A guide for state & local agencies on how to improve cross-organizational data sharing.</li>
-      <li>Accessibility Guide. Tools and practices making products and services accessible to everyone.</li>
-      <li>Agile Procurement Playbook. A guide on how to apply the principles of agile to procurement.</li>
-    </ul>
-
-    <p>
-      These toolkits are managed by our Communities of Practice. Communities
-      are organized groups within Skylight who are passionate about developing
-      and sharing our expertise with the world. We currently have nine communities
-      of practice. These include:
-    </p>
-
-    <ul>
-      <li><b>Delivery Management</b>, led by <a href="/company/about/#victor-zapanta">Victor Zapanta</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
-      <li><b>Research & Design</b>, led by <a href="/company/about/#victor-zapanta">Victor Zapanta</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
-      <li><b>Product</b>, led by <a href="/company/about/#victor-zapanta">Victor Zapanta</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
-      <li><b>Engineering</b>, led by <a href="/company/about/#victor-zapanta">Victor Zapanta</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
-      <li><b>Data</b>, led by <a href="/company/about/#victor-zapanta">Victor Zapanta</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
-      <li><b>Procurement</b>, led by <a href="/company/about/#chris-cairns">Chris Cairns</a> (<a href="mailto:chris@skylight.digital">chris@skylight.digital)</a></li>
-      <li><b>Transformation</b>, led by <a href="/company/about/#victor-zapanta">Victor Zapanta</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
-      <li><b>Accessibility</b>, led by <a href="/company/about/#nick-bristow">Nick Bristow</a> (<a href="mailto:nick@skylight.digital">nick@skylight.digital)</a></li>
-      <li><b>Internet of Things</b>, led by <a href="/company/about/#geoff-mulligan">Geoff Mulligan</a> (<a href="mailto:geoff@skylight.digital">geoff@skylight.digital)</a></li>
-    </ul>
-
+  <div class="row my-4">
+    <div class="col-sm-6 d-flex align-items-stretch">
+      <div class="toolkit-item p-5">
+        <a href="#0">
+          <h2 class="h3">Digital Talent Management Handbook</h2>
+        </a>
+        <p class="mb-0 mt-3">A comprehensive guide on how government agencies can recruit, hire, onboard, and retain digital talent.</p>
+      </div>
+    </div>
+    <div class="col-sm-6 d-flex align-items-stretch">
+      <div class="toolkit-item p-5">
+        <a href="#0">
+          <h2 class="h3">Data Sharing Playbook</h2>
+        </a>
+        <p class="mb-0 mt-3">A guide for state & local agencies on how to improve cross-organizational data sharing.</p>
+      </div>
+    </div>
+    <div class="col-sm-6 d-flex align-items-stretch mt-3">
+      <div class="toolkit-item p-5">
+        <a href="#0">
+          <h2 class="h3">Accessibility Guide</h2>
+        </a>
+        <p class="mb-0 mt-3">Tools and practices making products and services accessible to everyone.</p>
+      </div>
+    </div>
+    <div class="col-sm-6 d-flex align-items-stretch mt-3">
+      <div class="toolkit-item p-5">
+        <a href="#0">
+          <h2 class="h3">Agile Procurement Playbook</h2>
+        </a>
+        <p class="mb-0 mt-3">A guide on how to apply the principles of agile to procurement.</p>
+      </div>
+    </div>
   </div>
+
+  <p>
+    These toolkits are managed by our Communities of Practice. Communities
+    are organized groups within Skylight who are passionate about developing
+    and sharing our expertise with the world. We currently have nine communities
+    of practice. These include:
+  </p>
+
+  <ul>
+    <li><b>Delivery Management</b>, led by <a href="/company/about/#victor-zapanta">Victor Zapanta</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
+    <li><b>Research & Design</b>, led by <a href="/company/about/#victor-zapanta">Victor Zapanta</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
+    <li><b>Product</b>, led by <a href="/company/about/#victor-zapanta">Victor Zapanta</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
+    <li><b>Engineering</b>, led by <a href="/company/about/#victor-zapanta">Victor Zapanta</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
+    <li><b>Data</b>, led by <a href="/company/about/#victor-zapanta">Victor Zapanta</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
+    <li><b>Procurement</b>, led by <a href="/company/about/#chris-cairns">Chris Cairns</a> (<a href="mailto:chris@skylight.digital">chris@skylight.digital)</a></li>
+    <li><b>Transformation</b>, led by <a href="/company/about/#victor-zapanta">Victor Zapanta</a> (<a href="mailto:victor@skylight.digital">victor@skylight.digital)</a></li>
+    <li><b>Accessibility</b>, led by <a href="/company/about/#nick-bristow">Nick Bristow</a> (<a href="mailto:nick@skylight.digital">nick@skylight.digital)</a></li>
+    <li><b>Internet of Things</b>, led by <a href="/company/about/#geoff-mulligan">Geoff Mulligan</a> (<a href="mailto:geoff@skylight.digital">geoff@skylight.digital)</a></li>
+  </ul>
+
 </div>
 
 {% include get_expert_answers_cta.html %}
