Add text styles to toolkits

--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -9,7 +9,7 @@ permalink: /work/toolkits/
   color = 'blue'
 %}
 
-<div class="container">
+<div class="container text">
   <p>
     Here are some of the tools and resources that we use at Skylight to help us and our
     clients deliver better public services. These toolkits are always being iterated on
