--- a/pages/talks.html
+++ b/pages/talks.html
@@ -11,15 +11,42 @@ permalink: /thoughts/talks/
 
 <div class="container">
   <div class="row">
+    <div class="col-sm-6">
+      <div class=" embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/_eGtm66_X9E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/lQREvCGELq8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="col-sm-6 mt-4">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/n7aE6k8o_BU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="col-sm-6 mt-4">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/DbatBt_fPug" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="col-sm-6 mt-4">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/kWyYdjWDaXU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
   </div>
+  https://federalnewsnetwork.com/fedtalk/2018/03/dissecting-the-presidents-management-agenda/
+  https://www.publicspendforum.net/podcasts/modernizing-government-it-micropurchase-podcast/
 </div>
 
-https://www.youtube.com/watch?v=_eGtm66_X9E&t=3s
+
+<!-- https://www.youtube.com/watch?v=_eGtm66_X9E&t=3s
 https://www.youtube.com/watch?v=lQREvCGELq8&t=6s
 https://www.youtube.com/watch?v=n7aE6k8o_BU&t=29s
 https://www.youtube.com/watch?v=DbatBt_fPug
-https://www.youtube.com/watch?v=kWyYdjWDaXU
-https://federalnewsnetwork.com/fedtalk/2018/03/dissecting-the-presidents-management-agenda/
-https://www.publicspendforum.net/podcasts/modernizing-government-it-micropurchase-podcast/
+https://www.youtube.com/watch?v=kWyYdjWDaXU -->
+
 
 {% include hire_us_cta.html %}
