--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -18,7 +18,7 @@ permalink: /work/toolkits/
   </p>
 
   <div class="row my-4">
-    <div class="col-sm-6 d-flex align-items-stretch">
+    <div class="col-md-6 d-flex align-items-stretch">
       <div class="toolkit-item p-5">
         <a href="#0">
           <h2 class="h3">Digital Talent Management Handbook</h2>
@@ -26,7 +26,7 @@ permalink: /work/toolkits/
         <p class="mb-0 mt-3">A comprehensive guide on how government agencies can recruit, hire, onboard, and retain digital talent.</p>
       </div>
     </div>
-    <div class="col-sm-6 d-flex align-items-stretch">
+    <div class="col-md-6 d-flex align-items-stretch mt-3 mt-md-0">
       <div class="toolkit-item p-5">
         <a href="#0">
           <h2 class="h3">Data Sharing Playbook</h2>
@@ -34,7 +34,7 @@ permalink: /work/toolkits/
         <p class="mb-0 mt-3">A guide for state & local agencies on how to improve cross-organizational data sharing.</p>
       </div>
     </div>
-    <div class="col-sm-6 d-flex align-items-stretch mt-3">
+    <div class="col-md-6 d-flex align-items-stretch mt-3">
       <div class="toolkit-item p-5">
         <a href="#0">
           <h2 class="h3">Accessibility Guide</h2>
@@ -42,7 +42,7 @@ permalink: /work/toolkits/
         <p class="mb-0 mt-3">Tools and practices making products and services accessible to everyone.</p>
       </div>
     </div>
-    <div class="col-sm-6 d-flex align-items-stretch mt-3">
+    <div class="col-md-6 d-flex align-items-stretch mt-3">
       <div class="toolkit-item p-5">
         <a href="#0">
           <h2 class="h3">Agile Procurement Playbook</h2>
