--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -9,7 +9,7 @@ permalink: /work/toolkits/
   color = 'blue'
 %}
 
-<div class="container text">
+<div class="container container-lg text">
   <p>
     Here are some of the tools and resources that we use at Skylight to help us and our
     clients deliver better public services. These toolkits are always being iterated on
@@ -26,7 +26,7 @@ permalink: /work/toolkits/
         <p class="mb-0 mt-3">A comprehensive guide on how government agencies can recruit, hire, onboard, and retain digital talent.</p>
       </div>
     </div>
-    <div class="col-md-6 d-flex align-items-stretch mt-3 mt-md-0">
+    <div class="col-md-6 d-flex align-items-stretch mt-5 mt-md-0">
       <div class="toolkit-item p-5">
         <a href="#0">
           <h2 class="h3">Data Sharing Playbook</h2>
@@ -34,7 +34,7 @@ permalink: /work/toolkits/
         <p class="mb-0 mt-3">A guide for state & local agencies on how to improve cross-organizational data sharing.</p>
       </div>
     </div>
-    <div class="col-md-6 d-flex align-items-stretch mt-3">
+    <div class="col-md-6 d-flex align-items-stretch mt-5">
       <div class="toolkit-item p-5">
         <a href="#0">
           <h2 class="h3">Accessibility Guide</h2>
@@ -42,7 +42,7 @@ permalink: /work/toolkits/
         <p class="mb-0 mt-3">Tools and practices making products and services accessible to everyone.</p>
       </div>
     </div>
-    <div class="col-md-6 d-flex align-items-stretch mt-3">
+    <div class="col-md-6 d-flex align-items-stretch mt-5">
       <div class="toolkit-item p-5">
         <a href="#0">
           <h2 class="h3">Agile Procurement Playbook</h2>
