--- a/pages/press.html
+++ b/pages/press.html
@@ -4,11 +4,13 @@ title: Press
 permalink: /company/press/
 press:
   - title: Digital Services Coalition Works to Deliver IT in a New Way to the Federal Government
-    tag: Government Technology
+    heading: We’re in the press
     date: 01-07-2020
+    tag: Government Technology
     url: https://medium.com/@DigitalServicesCoalition/digital-services-coalition-works-to-deliver-it-in-a-new-way-to-the-federal-government-3bc1e59bc4e7
     summary: 16 agile digital services firms are coming together to form the Digital Services Coalition to bring innovation and agility to government IT contracting.
   - title: "Application rationalization playbook: A prescriptive AND flexible approach to the cloud"
+    heading: We’re in the press
     tag: Government Technology
     date: 06-01-2019
     url: https://federalnewsnetwork.com/reporters-notebook-jason-miller/2019/07/application-rationalization-playbook-a-prescriptive-and-flexible-approach-to-the-cloud/
@@ -23,9 +25,15 @@ press:
 <div class="container container-md text">
   {% for item in page.press %}
     <p class="font-weight-bold mb-1 small mt-5">{{ item.tag }}: {{ item.date }}</p>
-    <h2 class="h3 text-primary">{{ item.title }}</h2>
+    <h2 class="h3 text-primary">
+      {% if item.heading %}
+        {{ item.heading }}
+      {% else %}
+        {{ item.title }}
+      {% endif %}
+    </h2>
     <p class="mt-3">{{ item.summary }}</p>
-    <p class="font-weight-bold">Full Story: <a href="#0">{{ item.title }}</a></p>
+    <p class="font-weight-bold">Full story: <a href="#0">{{ item.title }}</a></p>
   {% endfor %}
 </div>
 
