--- a/pages/press.html
+++ b/pages/press.html
@@ -6,12 +6,12 @@ press:
   - title: Digital Services Coalition Works to Deliver IT in a New Way to the Federal Government
     heading: We’re in the press
     date: 01-07-2020
-    tag: Government Technology
+    source: Digital Services Coalition
     url: https://medium.com/@DigitalServicesCoalition/digital-services-coalition-works-to-deliver-it-in-a-new-way-to-the-federal-government-3bc1e59bc4e7
     summary: 16 agile digital services firms are coming together to form the Digital Services Coalition to bring innovation and agility to government IT contracting.
   - title: "Application rationalization playbook: A prescriptive AND flexible approach to the cloud"
     heading: We’re in the press
-    tag: Government Technology
+    source: Federal News Network
     date: 06-01-2019
     url: https://federalnewsnetwork.com/reporters-notebook-jason-miller/2019/07/application-rationalization-playbook-a-prescriptive-and-flexible-approach-to-the-cloud/
     summary: The Small Business Administration may be the perfect case study for why agencies needed the new application rationalization playbook from the Chief Information Officer’s Council.
@@ -24,7 +24,7 @@ press:
 
 <div class="container container-md text">
   {% for item in page.press %}
-    <p class="font-weight-bold mb-1 small mt-5">{{ item.tag }}: {{ item.date }}</p>
+    <p class="font-weight-bold mb-1 small mt-5">{{ item.source }}: {{ item.date }}</p>
     <h2 class="h3 text-primary">
       {% if item.heading %}
         {{ item.heading }}
