Update banner colors

--- a/pages/contracting.html
+++ b/pages/contracting.html
@@ -6,7 +6,8 @@ permalink: /connect/contracting/
 
 {% include hero_banner.html
   hero_content = 'Learn more about why and how to contract with us.'
-  color = 'blue'
+  color = "yellow"
+  text = "dark"
 %}
 
 <div class="container container-md text prose">
