Add contact to toolkits

--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -23,7 +23,8 @@ permalink: /work/toolkits/
         <a href="#0">
           <h2 class="h3">Digital Talent Management Handbook</h2>
         </a>
-        <p class="mb-0 mt-3">A comprehensive guide on how government agencies can recruit, hire, onboard, and retain digital talent.</p>
+        <p class="mt-3">A comprehensive guide on how government agencies can recruit, hire, onboard, and retain digital talent.</p>
+        <p class="mb-0">Contact: <a href="mailto:communities@skylight.digital">Transformation Community of Practice</a></p>
       </div>
     </div>
     <div class="col-md-6 d-flex align-items-stretch mt-5 mt-md-0">
@@ -31,7 +32,8 @@ permalink: /work/toolkits/
         <a href="#0">
           <h2 class="h3">Data Sharing Playbook</h2>
         </a>
-        <p class="mb-0 mt-3">A guide for state & local agencies on how to improve cross-organizational data sharing.</p>
+        <p class="mt-3">A guide for state & local agencies on how to improve cross-organizational data sharing.</p>
+        <p class="mb-0">Contact: <a href="mailto:communities@skylight.digital">Data Community of Practice</a></p>
       </div>
     </div>
     <div class="col-md-6 d-flex align-items-stretch mt-5">
@@ -39,7 +41,8 @@ permalink: /work/toolkits/
         <a href="#0">
           <h2 class="h3">Accessibility Guide</h2>
         </a>
-        <p class="mb-0 mt-3">Tools and practices making products and services accessible to everyone.</p>
+        <p class="mt-3">Tools and practices making products and services accessible to everyone.</p>
+        <p class="mb-0">Contact: <a href="mailto:communities@skylight.digital">Accessibility Community of Practice</a></p>
       </div>
     </div>
     <div class="col-md-6 d-flex align-items-stretch mt-5">
@@ -47,7 +50,8 @@ permalink: /work/toolkits/
         <a href="#0">
           <h2 class="h3">Agile Procurement Playbook</h2>
         </a>
-        <p class="mb-0 mt-3">A guide on how to apply the principles of agile to procurement.</p>
+        <p class="mt-3">A guide on how to apply the principles of agile to procurement.</p>
+        <p class="mb-0">Contact: <a href="mailto:communities@skylight.digital">Procurement Community of Practice</a></p>
       </div>
     </div>
   </div>
