Add services first pass

--- a/pages/services.html
+++ b/pages/services.html
@@ -15,8 +15,99 @@ redirect_from:
   color = 'blue'
 %}
 
-<div class="our-services">
+<div class="">
+  <div class="container prose">
+    <div class="row">
+      <div class="col-sm-6">
+        <h2>Service Delivery</h2>
+        <p><b>Today's public expects their interactions with the government to be delightful, secure, and empowering.</b> At Skylight, we specialize in creating exceptional user experiences and enduring solution architectures out of your most complex design and technology challenges.</p>
+      </div>
+      <div class="col-sm-6">
+      </div>
+    </div>
 
+    <div class="row mt-4">
+      <div class="col-sm-6">
+        <h3>How we’ve helped others</h3>
+        <ul class="text">
+          <li><a href="{{ site.baseurl }}/work/va-diffusion-marketplace/">Created a knowledge platform for improving healthcare for the Veterans Affairs</a></li>
+          <li><a href="{{ site.baseurl }}/work/uscis-everify-modernization/">Modernized employment eligibility verification for the U.S. Citizenship and Immigration Services</a></li>
+          <li><a href="#0">Case study #3</a></li>
+        </ul>
+      </div>
+      <div class="col-sm-6">
+        <h3>Areas of expertise</h3>
+        <ul>
+          <li>Research & Design</li>
+          <li>Agile Methods</li>
+          <li>Software Delivery</li>
+          <li>Legacy Modernization</li>
+          <li>Microservices & Evolutionary Architecture</li>
+          <li>DevOps</li>
+          <li>Data & Analytics</li>
+          <li>Open Data & APIs</li>
+          <li>Cloud & Platform Engineering</li>
+          <li>Internet of Things</li>
+          <li>Security & Privacy</li>
+          <li>Product Management</li>
+          <li>Delivery Management</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="mt-5 bg-gray-light py-5">
+  <div class="container prose">
+    <div class="row">
+      <div class="col-sm-6">
+        <h2>Procurement</h2>
+        <p><b>To support digital progress, procurement must change.</b> At Skylight, we combine technical and acquisition brains to make procurement work for you in the digital age. That means greater collaboration with vendors, faster delivery of value, higher quality results, lower costs, and more breakthrough innovations.</p>
+      </div>
+      <div class="col-sm-6">
+      </div>
+    </div>
+
+    <div class="row mt-4">
+      <div class="col-sm-6">
+        <h3>How we’ve helped others</h3>
+        <ul>
+          <li>TBD</li>
+          <li>TBD</li>
+          <li>TBD</li>
+        </ul>
+      </div>
+      <div class="col-sm-6">
+        <h3>Areas of expertise</h3>
+        <ul>
+          <li>TBD</li>
+          <li>TBD</li>
+          <li>TBD</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="mt-5">
+  <div class="container prose">
+    <h2>Transformation</h2>
+    <p><b>"Going digital" is about people first and technology second.</b> At Skylight, we possess first-hand experience with embedding digital expertise throughout government organizations, and putting the operating principles, structures, and tools in place to unleash the superpowers of high-caliber digital teams.</p>
+  </div>
+</div>
+
+<div class="mt-5 bg-gray-light py-5">
+  <div class="container prose">
+    <h2>Microconsulting</h2>
+    <p><b>Need immediate, high-impact support to address a problem or opportunity that doesn't require a full-blown engagement?</b> Microconsulting is designed specifically for that purpose, providing you with on-demand access to our digital expertise. These services are conveniently priced within the government's micropurchase thresholds. And can be delivered in a variety of modular formats, including training, workshop, or custom engagement.</p>
+  </div>
+</div>
+
+<div class="mt-5">
+  <div class="container prose">
+    <h2>Training</h2>
+    <p>TBD</p>
+  </div>
 </div>
 
 {% include hire_us_cta.html %}
