Add butttons to services

--- a/pages/services.html
+++ b/pages/services.html
@@ -21,12 +21,13 @@ redirect_from:
       <div class="col-sm-6">
         <h2>Service Delivery</h2>
         <p><b>Today's public expects their interactions with the government to be delightful, secure, and empowering.</b> At Skylight, we specialize in creating exceptional user experiences and enduring solution architectures out of your most complex design and technology challenges.</p>
+        <a class="btn btn-primary-dark font-weight-bold" href="#0">Learn more</a>
       </div>
       <div class="col-sm-6">
       </div>
     </div>
 
-    <div class="row mt-4">
+    <div class="row mt-5">
       <div class="col-sm-6">
         <h3>How we’ve helped others</h3>
         <ul class="text">
@@ -63,12 +64,13 @@ redirect_from:
       <div class="col-sm-6">
         <h2>Procurement</h2>
         <p><b>To support digital progress, procurement must change.</b> At Skylight, we combine technical and acquisition brains to make procurement work for you in the digital age. That means greater collaboration with vendors, faster delivery of value, higher quality results, lower costs, and more breakthrough innovations.</p>
+        <a class="btn btn-primary-dark font-weight-bold" href="#0">Learn more</a>
       </div>
       <div class="col-sm-6">
       </div>
     </div>
 
-    <div class="row mt-4">
+    <div class="row mt-5">
       <div class="col-sm-6">
         <h3>How we’ve helped others</h3>
         <ul>
@@ -93,6 +95,7 @@ redirect_from:
   <div class="container prose">
     <h2>Transformation</h2>
     <p><b>"Going digital" is about people first and technology second.</b> At Skylight, we possess first-hand experience with embedding digital expertise throughout government organizations, and putting the operating principles, structures, and tools in place to unleash the superpowers of high-caliber digital teams.</p>
+    <a class="btn btn-primary-dark font-weight-bold" href="#0">Learn more</a>
   </div>
 </div>
 
@@ -100,6 +103,7 @@ redirect_from:
   <div class="container prose">
     <h2>Microconsulting</h2>
     <p><b>Need immediate, high-impact support to address a problem or opportunity that doesn't require a full-blown engagement?</b> Microconsulting is designed specifically for that purpose, providing you with on-demand access to our digital expertise. These services are conveniently priced within the government's micropurchase thresholds. And can be delivered in a variety of modular formats, including training, workshop, or custom engagement.</p>
+    <a class="btn btn-primary-dark font-weight-bold" href="#0">Learn more</a>
   </div>
 </div>
 
@@ -107,6 +111,7 @@ redirect_from:
   <div class="container prose">
     <h2>Training</h2>
     <p>TBD</p>
+    <a class="btn btn-primary-dark font-weight-bold" href="{{ site.baseurl }}/work/services/training/">Learn more</a>
   </div>
 </div>
 
