--- a/pages/services.html
+++ b/pages/services.html
@@ -29,7 +29,7 @@ redirect_from:
 
     <div class="row mt-5">
       <div class="col-sm-6">
-        <h3>How we’ve helped others</h3>
+        <h3>How we've helped others</h3>
         <ul class="text">
           <li><a href="{{ site.baseurl }}/work/va-diffusion-marketplace/">Created a knowledge platform for improving healthcare for the Veterans Affairs</a></li>
           <li><a href="{{ site.baseurl }}/work/uscis-everify-modernization/">Modernized employment eligibility verification for the U.S. Citizenship and Immigration Services</a></li>
@@ -72,7 +72,7 @@ redirect_from:
 
     <div class="row mt-5">
       <div class="col-sm-6">
-        <h3>How we’ve helped others</h3>
+        <h3>How we've helped others</h3>
         <ul>
           <li>TBD</li>
           <li>TBD</li>
