--- a/_service_areas/ditap.html
+++ b/_service_areas/ditap.html
@@ -139,28 +139,36 @@ class_2_spots:
 
       <div class="image-list row">
         <div class="col-12 col-lg-4">
-          <div role="img" class="employee-img" style="background-image: url(/img/people/chris-cairns.jpg);" title="Chris Cairns"></div>
+          <div class="employee-gradient employee-gradient__img">
+            <div role="img" class="employee-img" style="background-image: url(/img/people/chris-cairns.jpg);" title="Chris Cairns"></div>
+          </div>
         </div>
         <div class="col-12 col-lg-8">
           <h3>Chris Cairns</h3>
           <p>Chris served as a White House Presidential Innovation Fellow, and co-founded 18F. He started and built 18F's influential acquisition group, which specializes in digital acquisition methods. Chris is known for pioneering 18F's <a href="/work/experience/agile-acquisition-framework/">agile acquisition framework</a>, and for architecting the government's first-ever <a href="/work/experience/agile-delivery-services-marketplace/">agile vendor contract vehicle</a> using a tech challenge.</p>
         </div>
         <div class="col-12 col-lg-4">
-          <div role="img" class="employee-img" style="background-image: url(/img/people/dan-levenson.jpg);" title="Dan Levenson"></div>
+          <div class="employee-gradient employee-gradient__img">
+            <div role="img" class="employee-img" style="background-image: url(/img/people/dan-levenson.jpg);" title="Dan Levenson"></div>
+          </div>
         </div>
         <div class="col-12 col-lg-8">
           <h3>Dan Levenson</h3>
           <p>Dan is a senior executive with <a href="https://agile6.com/">Agile Six</a>. He previously served as a certified digital acquisition expert and contracting officer for the Centers for Medicare & Medicaid Services (CMS). At CMS, Dan architected and managed a highly successful agile vendor contract vehicle, which supports programs such as the Quality Payment Program.</p>
         </div>
         <div class="col-12 col-lg-4">
-          <div role="img" class="employee-img" style="background-image: url(/img/people/robert-read.jpg);" title="Robert Read, PhD"></div>
+          <div class="employee-gradient employee-gradient__img">
+            <div role="img" class="employee-img" style="background-image: url(/img/people/robert-read.jpg);" title="Robert Read, PhD"></div>
+          </div>
         </div>
         <div class="col-12 col-lg-8">
           <h3>Robert Read, PhD</h3>
           <p>Robert served as a White House Presidential Innovation Fellow, and co-founded 18F. Originally trained by agile pioneer Kent Beck, Robert has over 15 years experience as an agile practitioner and coach. He holds a PhD in computer science, and is best known for writing a popular, multilingual guide on <a href="https://github.com/braydie/HowToBeAProgrammer">how to be a programmer</a>.</p>
         </div>
         <div class="col-12 col-lg-4">
-          <div role="img" class="employee-img" style="background-image: url(/img/people/lara-kohl.jpg);" title="Lara Kohl"></div>
+          <div class="employee-gradient employee-gradient__img">
+            <div role="img" class="employee-img" style="background-image: url(/img/people/lara-kohl.jpg);" title="Lara Kohl"></div>
+          </div>
         </div>
         <div class="col-12 col-lg-8">
           <h3>Lara Kohl</h3>
