--- a/pages/join.html
+++ b/pages/join.html
@@ -61,7 +61,9 @@ hero_content: Help us change the way government works.
 
         <div class="image-list row">
           <div class="col-sm-4 col-lg-3">
-            <img src="{{ site.baseurl }}/img/people/charlye-delgado.jpg" alt="Charlye Delgado">
+            <div class="employee-gradient employee-gradient__img">
+              <img src="{{ site.baseurl }}/img/people/charlye-delgado.jpg" alt="Charlye Delgado">
+            </div>
           </div>
           <div class="col-sm-8 col-lg-9">
             <p class="quote-text font-size-large">
@@ -76,7 +78,9 @@ hero_content: Help us change the way government works.
 
         <div class="image-list row">
           <div class="col-sm-4 col-lg-3">
-            <img src="{{ site.baseurl }}/img/people/shashank-khandelwal.jpg" alt="Shashank Khandelwal">
+            <div class="employee-gradient employee-gradient__img">
+              <img src="{{ site.baseurl }}/img/people/shashank-khandelwal.jpg" alt="Shashank Khandelwal">
+            </div>
           </div>
           <div class="col-sm-8 col-lg-9">
             <p class="quote-text font-size-large">
@@ -90,7 +94,9 @@ hero_content: Help us change the way government works.
 
         <div class="image-list row">
           <div class="col-sm-4 col-lg-3">
-            <img src="{{ site.baseurl }}/img/people/laura-vlassarev.jpg" alt="Laura Vlassarev">
+            <div class="employee-gradient employee-gradient__img">
+              <img src="{{ site.baseurl }}/img/people/laura-vlassarev.jpg" alt="Laura Vlassarev">
+            </div>
           </div>
           <div class="col-sm-8 col-lg-9">
             <p class="quote-text font-size-large">
