update ditap contact

--- a/_service_areas/ditap.html
+++ b/_service_areas/ditap.html
@@ -290,7 +290,7 @@ class_2_spots:
   header = "Still have more questions?"
   text = "Please don't hesitate to ask."
   text_css_class = "page-subfooter-text-col"
-  cta_path = "mailto:edu@skylight.digital"
+  cta_path = "mailto:training@skylight.digital"
   cta = "Email Us"
   icon_css_class = "fa fa-at"
 %}
