--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -20,7 +20,7 @@ permalink: /work/toolkits/
   <div class="row my-4">
     <div class="col-md-6 d-flex align-items-stretch">
       <div class="toolkit-item p-5">
-        <a href="#0">
+        <a href="/work/toolkits/digital-talent-management/">
           <h2 class="h3">Digital Talent Management Handbook</h2>
         </a>
         <p class="mt-3">A comprehensive guide on how government agencies can recruit, hire, onboard, and retain digital talent.</p>
