--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -29,7 +29,7 @@ permalink: /work/toolkits/
     </div>
     <div class="col-md-6 d-flex align-items-stretch mt-5 mt-md-0">
       <div class="toolkit-item p-5">
-        <a href="#0">
+        <a href="/work/toolkits/data-sharing-playbook/">
           <h2 class="h3">Data Sharing Playbook</h2>
         </a>
         <p class="mt-3">A guide for state & local agencies on how to improve cross-organizational data sharing.</p>
@@ -38,7 +38,7 @@ permalink: /work/toolkits/
     </div>
     <div class="col-md-6 d-flex align-items-stretch mt-5">
       <div class="toolkit-item p-5">
-        <a href="#0">
+        <a href="/work/toolkits/data-culture-playbook/">
           <h2 class="h3">Data Culture Playbook</h2>
         </a>
         <p class="mt-3">An introductory guide on how to cultivate a data culture in order to improve data-informed decision-making.</p>
@@ -47,7 +47,7 @@ permalink: /work/toolkits/
     </div>
     <div class="col-md-6 d-flex align-items-stretch mt-5">
       <div class="toolkit-item p-5">
-        <a href="#0">
+        <a href="/work/toolkits/accessibility-guide/">
           <h2 class="h3">Accessibility Guide</h2>
         </a>
         <p class="mt-3">Tools and practices making products and services accessible to everyone.</p>
@@ -56,7 +56,7 @@ permalink: /work/toolkits/
     </div>
     <div class="col-md-6 d-flex align-items-stretch mt-5">
       <div class="toolkit-item p-5">
-        <a href="#0">
+        <a href="/work/toolkits/agile-procurement-playbook/">
           <h2 class="h3">Agile Procurement Playbook</h2>
         </a>
         <p class="mt-3">A guide on how to apply the principles of agile to procurement.</p>
