--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -23,7 +23,7 @@ permalink: /work/toolkits/
         <a href="/work/toolkits/digital-talent-management/">
           <h2 class="h3">Digital Talent Management Handbook</h2>
         </a>
-        <p class="mt-3">A comprehensive guide on how government agencies can recruit, hire, onboard, and retain digital talent.</p>
+        <p class="mt-3">{{ site.data.toolkits.digital_talent_management.description }}</p>
         <p class="mb-0">Contact: <a href="mailto:communities@skylight.digital">Transformation Community of Practice</a></p>
       </div>
     </div>
@@ -32,7 +32,7 @@ permalink: /work/toolkits/
         <a href="/work/toolkits/data-sharing-playbook/">
           <h2 class="h3">Data Sharing Playbook</h2>
         </a>
-        <p class="mt-3">A guide for state & local agencies on how to improve cross-organizational data sharing.</p>
+        <p class="mt-3">{{ site.data.toolkits.data_sharing_playbook.description }}</p>
         <p class="mb-0">Contact: <a href="mailto:communities@skylight.digital">Data Community of Practice</a></p>
       </div>
     </div>
@@ -41,7 +41,7 @@ permalink: /work/toolkits/
         <a href="/work/toolkits/data-culture-playbook/">
           <h2 class="h3">Data Culture Playbook</h2>
         </a>
-        <p class="mt-3">An introductory guide on how to cultivate a data culture in order to improve data-informed decision-making.</p>
+        <p class="mt-3">{{ site.data.toolkits.data_culture_playbook.description }}</p>
         <p class="mb-0">Contact: <a href="mailto:communities@skylight.digital">Data Community of Practice</a></p>
       </div>
     </div>
@@ -50,7 +50,7 @@ permalink: /work/toolkits/
         <a href="/work/toolkits/accessibility-guide/">
           <h2 class="h3">Accessibility Guide</h2>
         </a>
-        <p class="mt-3">Tools and practices making products and services accessible to everyone.</p>
+        <p class="mt-3">{{ site.data.toolkits.accessibility_guide.description }}</p>
         <p class="mb-0">Contact: <a href="mailto:communities@skylight.digital">Accessibility Community of Practice</a></p>
       </div>
     </div>
@@ -59,7 +59,7 @@ permalink: /work/toolkits/
         <a href="/work/toolkits/agile-procurement-playbook/">
           <h2 class="h3">Agile Procurement Playbook</h2>
         </a>
-        <p class="mt-3">A guide on how to apply the principles of agile to procurement.</p>
+        <p class="mt-3">{{ site.data.toolkits.agile_procurement_playbook.description }}</p>
         <p class="mb-0">Contact: <a href="mailto:communities@skylight.digital">Procurement Community of Practice</a></p>
       </div>
     </div>
