Update services page content

--- a/pages/services.html
+++ b/pages/services.html
@@ -20,8 +20,8 @@ redirect_from:
     <div class="row">
       <div class="col-sm-6">
         <h2>Service Delivery</h2>
-        <p><b>Today's public expects their interactions with the government to be delightful, secure, and empowering.</b> At Skylight, we specialize in creating exceptional user experiences and enduring solution architectures out of your most complex design and technology challenges.</p>
-        <a class="btn btn-primary-dark font-weight-bold" href="#0">Learn more</a>
+        <p><b>Today's public expects their interactions with the government to be delightful, secure, and empowering.</b> We specialize in creating exceptional user experiences and enduring solution architectures out of your most complex design and technology challenges.</p>
+        <a class="btn btn-primary-dark font-weight-bold" href="#0">Delight your users</a>
       </div>
       <div class="col-sm-6">
       </div>
@@ -29,29 +29,19 @@ redirect_from:
 
     <div class="row mt-5">
       <div class="col-sm-6">
-        <h3>How we've helped others</h3>
+        <h3>Some ways we can help you:</h3>
         <ul class="text">
-          <li><a href="{{ site.baseurl }}/work/va-diffusion-marketplace/">Created a knowledge platform for improving healthcare for the Veterans Affairs</a></li>
-          <li><a href="{{ site.baseurl }}/work/uscis-everify-modernization/">Modernized employment eligibility verification for the U.S. Citizenship and Immigration Services</a></li>
-          <li><a href="#0">Case study #3</a></li>
+          <li>Create a product that your users love</li>
+          <li>De-risk the modernization of your legacy systems</li>
+          <li>Make your data open and accessible to the public</li>
         </ul>
       </div>
       <div class="col-sm-6">
-        <h3>Areas of expertise</h3>
+        <h3>Examples of how we’ve helped others:</h3>
         <ul>
-          <li>Research & Design</li>
-          <li>Agile Methods</li>
-          <li>Software Delivery</li>
-          <li>Legacy Modernization</li>
-          <li>Microservices & Evolutionary Architecture</li>
-          <li>DevOps</li>
-          <li>Data & Analytics</li>
-          <li>Open Data & APIs</li>
-          <li>Cloud & Platform Engineering</li>
-          <li>Internet of Things</li>
-          <li>Security & Privacy</li>
-          <li>Product Management</li>
-          <li>Delivery Management</li>
+          <li>Modernized data collection systems for improving early childhood outcomes in Connecticut</li>
+          <li>Created a knowledge platform for improving how the Veterans Affairs delivers healthcare</li>
+          <li>Built an application for improving the U.S. Air Force’s aircrew safety and equipment operations</li>
         </ul>
       </div>
     </div>
@@ -63,8 +53,8 @@ redirect_from:
     <div class="row">
       <div class="col-sm-6">
         <h2>Procurement</h2>
-        <p><b>To support digital progress, procurement must change.</b> At Skylight, we combine technical and acquisition brains to make procurement work for you in the digital age. That means greater collaboration with vendors, faster delivery of value, higher quality results, lower costs, and more breakthrough innovations.</p>
-        <a class="btn btn-primary-dark font-weight-bold" href="#0">Learn more</a>
+        <p><b>To support digital progress, procurement must change.</b> We combine technical and acquisition brains to make procurement work for you in the digital age. That means greater collaboration with vendors, faster delivery of value, higher quality results, lower costs, and more breakthrough innovations.</p>
+        <a class="btn btn-primary-dark font-weight-bold" href="#0">Buy better</a>
       </div>
       <div class="col-sm-6">
       </div>
@@ -72,19 +62,19 @@ redirect_from:
 
     <div class="row mt-5">
       <div class="col-sm-6">
-        <h3>How we've helped others</h3>
+        <h3>Some ways we can help you:</h3>
         <ul>
-          <li>TBD</li>
-          <li>TBD</li>
-          <li>TBD</li>
+          <li>Transition you to the world of modern procurement</li>
+          <li>Transform how you engage with technology vendors</li>
+          <li>Propel the performance of your contractor teams</li>
         </ul>
       </div>
       <div class="col-sm-6">
-        <h3>Areas of expertise</h3>
+        <h3>Examples of how we’ve helped others:</h3>
         <ul>
-          <li>TBD</li>
-          <li>TBD</li>
-          <li>TBD</li>
+          <li>Made procurements more agile at all levels of government</li>
+          <li>Streamlined how multiple agencies procure software</li>
+          <li>Embedded technical brains to de-risk a critical software acquisition for the U.S. Department of Labor</li>
         </ul>
       </div>
     </div>
@@ -93,17 +83,63 @@ redirect_from:
 
 <div class="mt-5">
   <div class="container prose">
-    <h2>Transformation</h2>
-    <p><b>"Going digital" is about people first and technology second.</b> At Skylight, we possess first-hand experience with embedding digital expertise throughout government organizations, and putting the operating principles, structures, and tools in place to unleash the superpowers of high-caliber digital teams.</p>
-    <a class="btn btn-primary-dark font-weight-bold" href="#0">Learn more</a>
+    <div class="row">
+      <div class="col-sm-6">
+        <h2>Transformation</h2>
+        <p><b>"Going digital" is about people first and technology second.</b> We possess first-hand experience with embedding digital expertise throughout government organizations, and putting the operating principles, structures, and tools in place to unleash the superpowers of high-caliber digital teams.</p>
+        <a class="btn btn-primary-dark font-weight-bold" href="#0">Transform now</a>
+      </div>
+    </div>
+
+    <div class="row mt-5">
+      <div class="col-sm-6">
+        <h3>Some ways we can help you:</h3>
+        <ul>
+          <li>Jumpstart your journey to becoming a digital-first agency</li>
+          <li>Institute digital ways of thinking and working at all levels</li>
+          <li>Increase your digital talent density</li>
+        </ul>
+      </div>
+      <div class="col-sm-6">
+        <h3>Examples of how we’ve helped others:</h3>
+        <ul>
+          <li>Supported the U.S. Air Force in building a large-scale digital center of enablement</li>
+          <li>Helped transform how the Connecticut Office of Early Childhood delivers services</li>
+          <li>Accelerated the Transportation Security Administration’s adoption of the cloud</li>
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
 
 <div class="mt-5 bg-gray-light py-5">
   <div class="container prose">
-    <h2>Microconsulting</h2>
-    <p><b>Need immediate, high-impact support to address a problem or opportunity that doesn't require a full-blown engagement?</b> Microconsulting is designed specifically for that purpose, providing you with on-demand access to our digital expertise. These services are conveniently priced within the government's micropurchase thresholds. And can be delivered in a variety of modular formats, including training, workshop, or custom engagement.</p>
-    <a class="btn btn-primary-dark font-weight-bold" href="#0">Learn more</a>
+    <div class="row">
+      <div class="col-sm-6">
+        <h2>Microconsulting</h2>
+        <p><b>Need immediate, high-impact support to address a problem or opportunity that doesn't require a full-blown engagement?</b> Our microconsulting services are designed specifically for that purpose, providing you with on-demand access to our expertise. They're also conveniently priced within the government's micropurchase threshold, which makes engaging with us just a “swipe of the credit card away.”</p>
+        <a class="btn btn-primary-dark font-weight-bold" href="#0">Learn more</a>
+      </div>
+    </div>
+
+    <div class="row mt-5">
+      <div class="col-sm-6">
+        <h3>Some ways we can help you:</h3>
+        <ul>
+          <li>Provide expert advice on a specific topic</li>
+          <li>Rapidly prototype an idea to facilitate strategic decision-making</li>
+          <li>Identify high-impact opportunities to improve the health of your project</li>
+        </ul>
+      </div>
+      <div class="col-sm-6">
+        <h3>Examples of how we’ve helped others:</h3>
+        <ul>
+          <li>Strategized a better mobile user experience for users of VA.gov</li>
+          <li>Prototyped an API governance tool for the Veterans Affairs</li>
+          <li>Advised the Environment Protection Agency on how to proceed with a critical system </li>
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -112,6 +148,25 @@ redirect_from:
     <h2>Training</h2>
     <p>TBD</p>
     <a class="btn btn-primary-dark font-weight-bold" href="{{ site.baseurl }}/work/services/training/">Learn more</a>
+
+    <div class="row mt-5">
+      <div class="col-sm-6">
+        <h3>Some ways we can help you:</h3>
+        <ul>
+          <li>TBD</li>
+          <li>TBD</li>
+          <li>TBD</li>
+        </ul>
+      </div>
+      <div class="col-sm-6">
+        <h3>Examples of how we’ve helped others:</h3>
+        <ul>
+          <li>TBD</li>
+          <li>TBD</li>
+          <li>TBD</li>
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
 
