--- a/pages/join.html
+++ b/pages/join.html
@@ -62,7 +62,7 @@ hero_content: Help us change the way government works.
         <div class="image-list row">
           <div class="col-sm-4 col-lg-3">
             <div class="employee-gradient employee-gradient__img">
-              <img src="{{ site.baseurl }}/img/people/charlye-delgado.jpg" alt="Charlye Delgado">
+              <img class="image-list__employee-img" src="{{ site.baseurl }}/img/people/charlye-delgado.jpg" alt="Charlye Delgado">
             </div>
           </div>
           <div class="col-sm-8 col-lg-9">
@@ -79,7 +79,7 @@ hero_content: Help us change the way government works.
         <div class="image-list row">
           <div class="col-sm-4 col-lg-3">
             <div class="employee-gradient employee-gradient__img">
-              <img src="{{ site.baseurl }}/img/people/shashank-khandelwal.jpg" alt="Shashank Khandelwal">
+              <img class="image-list__employee-img" src="{{ site.baseurl }}/img/people/shashank-khandelwal.jpg" alt="Shashank Khandelwal">
             </div>
           </div>
           <div class="col-sm-8 col-lg-9">
@@ -95,7 +95,7 @@ hero_content: Help us change the way government works.
         <div class="image-list row">
           <div class="col-sm-4 col-lg-3">
             <div class="employee-gradient employee-gradient__img">
-              <img src="{{ site.baseurl }}/img/people/laura-vlassarev.jpg" alt="Laura Vlassarev">
+              <img class="image-list__employee-img" src="{{ site.baseurl }}/img/people/laura-vlassarev.jpg" alt="Laura Vlassarev">
             </div>
           </div>
           <div class="col-sm-8 col-lg-9">
