--- a/pages/services.html
+++ b/pages/services.html
@@ -29,7 +29,7 @@ redirect_from:
 
     <div class="row mt-5">
       <div class="col-sm-6">
-        <h3>Some ways we can help you:</h3>
+        <h3>Ways we can help you:</h3>
         <ul class="text">
           <li>Create a product that your users love</li>
           <li>De-risk the modernization of your legacy systems</li>
@@ -37,11 +37,11 @@ redirect_from:
         </ul>
       </div>
       <div class="col-sm-6">
-        <h3>Examples of how we’ve helped others:</h3>
+        <h3>How we've helped others:</h3>
         <ul>
           <li>Modernized data collection systems for improving early childhood outcomes in Connecticut</li>
           <li>Created a knowledge platform for improving how the Veterans Affairs delivers healthcare</li>
-          <li>Built an application for improving the U.S. Air Force’s aircrew safety and equipment operations</li>
+          <li>Built an application for improving the U.S. Air Force's aircrew safety and equipment operations</li>
         </ul>
       </div>
     </div>
@@ -62,7 +62,7 @@ redirect_from:
 
     <div class="row mt-5">
       <div class="col-sm-6">
-        <h3>Some ways we can help you:</h3>
+        <h3>Ways we can help you:</h3>
         <ul>
           <li>Transition you to the world of modern procurement</li>
           <li>Transform how you engage with technology vendors</li>
@@ -70,7 +70,7 @@ redirect_from:
         </ul>
       </div>
       <div class="col-sm-6">
-        <h3>Examples of how we’ve helped others:</h3>
+        <h3>How we've helped others:</h3>
         <ul>
           <li>Made procurements more agile at all levels of government</li>
           <li>Streamlined how multiple agencies procure software</li>
@@ -93,7 +93,7 @@ redirect_from:
 
     <div class="row mt-5">
       <div class="col-sm-6">
-        <h3>Some ways we can help you:</h3>
+        <h3>Ways we can help you:</h3>
         <ul>
           <li>Jumpstart your journey to becoming a digital-first agency</li>
           <li>Institute digital ways of thinking and working at all levels</li>
@@ -101,11 +101,11 @@ redirect_from:
         </ul>
       </div>
       <div class="col-sm-6">
-        <h3>Examples of how we’ve helped others:</h3>
+        <h3>How we've helped others:</h3>
         <ul>
           <li>Supported the U.S. Air Force in building a large-scale digital center of enablement</li>
           <li>Helped transform how the Connecticut Office of Early Childhood delivers services</li>
-          <li>Accelerated the Transportation Security Administration’s adoption of the cloud</li>
+          <li>Accelerated the Transportation Security Administration's adoption of the cloud</li>
         </ul>
       </div>
     </div>
@@ -124,7 +124,7 @@ redirect_from:
 
     <div class="row mt-5">
       <div class="col-sm-6">
-        <h3>Some ways we can help you:</h3>
+        <h3>Ways we can help you:</h3>
         <ul>
           <li>Provide expert advice on a specific topic</li>
           <li>Rapidly prototype an idea to facilitate strategic decision-making</li>
@@ -132,7 +132,7 @@ redirect_from:
         </ul>
       </div>
       <div class="col-sm-6">
-        <h3>Examples of how we’ve helped others:</h3>
+        <h3>How we've helped others:</h3>
         <ul>
           <li>Strategized a better mobile user experience for users of VA.gov</li>
           <li>Prototyped an API governance tool for the Veterans Affairs</li>
@@ -151,7 +151,7 @@ redirect_from:
 
     <div class="row mt-5">
       <div class="col-sm-6">
-        <h3>Some ways we can help you:</h3>
+        <h3>Ways we can help you:</h3>
         <ul>
           <li>TBD</li>
           <li>TBD</li>
@@ -159,7 +159,7 @@ redirect_from:
         </ul>
       </div>
       <div class="col-sm-6">
-        <h3>Examples of how we’ve helped others:</h3>
+        <h3>How we've helped others:</h3>
         <ul>
           <li>TBD</li>
           <li>TBD</li>
